objects/Merchandise__c.object
<CustomObject>
    <description>it stores which item is purchased and bill of that</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Here is Description</description>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>Here is Price of item</description>
        <label>Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Inventory__c</fullName>
        <description>Here is total of all items purchased</description>
        <label>Total Inventory</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Merchandise</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merchandise</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>